package pt.ipp.isep.dei.esoft.project.domain.model;

import java.util.List;

public interface Sortable {

    List<GreenSpace> getSortedGreenSpaces (List <GreenSpace> greenSpaceList);
}
